--- a/src/main/resources/panel.fxml
+++ b/src/main/resources/panel.fxml
@@ -14,8 +14,8 @@
          <right>
             <VBox prefHeight="400.0" prefWidth="150.0" styleClass="rightSideBar" BorderPane.alignment="TOP_CENTER">
                <children>
-                  <JFXTreeTableView fx:id="table" prefWidth="150.0"/>
-                  <JFXButton fx:id="drawFinished" mnemonicParsing="false" onMouseClicked="#finishDraw" styleClass="rightButton" text="完成绘制">
+                  <JFXTreeTableView fx:id="table" prefWidth="150.0" />
+                  <JFXButton fx:id="drawFinished" mnemonicParsing="false" onMouseClicked="#finishDraw" style="-fx-background-color: grey;" styleClass="rightButton" text="完成绘制" textFill="WHITE">
                      <VBox.margin>
                         <Insets bottom="20.0" left="45.0" top="20.0" />
                      </VBox.margin>
